--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/setup-java@v3.12.0
         with:
         # The Java version to set up. Takes a whole or semver Java version. See examples of supported syntax in README file
-        java-version: # optional
+        java-version: 17
         # The path to the `.java-version` file. See examples of supported syntax in README file
         java-version-file: # optional
         # Java distribution. See the list of supported distributions in README file
