--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,12 @@
 
 	<build>
 		<plugins>
+			<dependency>
+                                 <groupId>org.apache.maven.plugin-tools</groupId>
+                                 <artifactId>maven-plugin-annotations</artifactId>
+                                 <scope>provided</scope>
+                         </dependency>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
