--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,16 +1,20 @@
 name: Java CI with Maven
-'on':
+
+on:
   push:
     branches:
       - main
   pull_request:
     branches:
       - main
+
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
@@ -20,6 +24,17 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
       - name: Update dependency graph
-        uses: >-
-          advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
-    
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Set up JDK
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11  # You can change this to the desired JDK version
+      - name: Build with Maven
+        run: mvn clean install
