--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,14 +9,18 @@ on:
       - main
 
 jobs:
-  build:
+   build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Set up JDK
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
-          java-version: 11  # You can change this to the desired JDK version
+          java-version: '17'
+          distribution: 'adopt'  # Specify the distribution here
+          cache: 'maven'
       - name: Build with Maven
-        run: mvn clean install
+        run: mvn -B package --file pom.xml
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
